powo-portal/src/main/frontend/src/sass/components/_header.scss
.c-header {
  background-color: $White;
  padding: 9px 0;
  box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.15);
  .container {
    display: flex;
    align-items: center;
    flex-wrap: wrap;
    .container::after {
      content: '';
      width: 100%;
    }
    .containerlast-child {
      order: 1;
    }
    .top-right-nav {
      content: '';
      margin-left: auto;
      ul {
        background: $kew-teal;
        display: block;
        position: absolute;
        top: 68px;
        left: 0;
        bottom: 0;
        right: 0;
        width: 100%;
        height: 100vh;
        padding: 6px 0;
        z-index: 3;
        outline: 0;
        @media (min-width: $screen-sm-min) {
          position: unset;
          height: auto;
          background: transparent;
        }
        &.active {
          display:none;
          @media (min-width: $screen-sm-min) {
            display: block;
          }
        }
        li {
          float:none;
          display:block;
          @media (min-width: $screen-sm-min) {
            float:left;
            list-style:none;
          }
          &.desktop {
            display: none;
            @media (min-width: $screen-sm-min) {
              display: block;
            }
          }
          &.mobile {
            display: block;
            @media (min-width: $screen-sm-min) {
              display: none;
            }
            .children 
            {
              &.active {
                display: none;
                background: $kew-medium-teal;
                position: absolute;
                top: 0;
                left: 0;
                bottom: 0;
                right: 0;
                width: 100%;
                height: 100vh;
                padding: 0;
                z-index: 4;
                &.open {
                  display: block;
                  -webkit-animation: slide 0.5s forwards;
                  -webkit-animation-delay: 2s;
                  animation: slide 0.5s forwards;
                  animation-delay: 2s;
                  .about-toggle {
                    background-color: $kew-teal;
                    margin-right: 0;
                    font-size: 20px;
                    margin-bottom: 11px;
                    padding: 11px 0 11px 20px;
                    min-height: 25px;
                    width: 100%;
                    text-align: left;
                    color: $White;
                    border: none; 
                    &:focus {
                      @include focus-text();
                    }    
                  }
                }
              }
            }
          }

        }
      }
      .top-link {
        text-transform: none;
        &:focus {
          @include focus-text();
        }
        &.cross-site-link {
          display: none;
        }
        @media (min-width: $screen-sm-min) {
          margin-right: 33px;
          text-transform: uppercase;
        }
        &.last {
          margin-right: 0;
        }
      }
      .toggle-nav {
        background-color: $White;
        border: none;
        display: block;
        height: 29px;
        &.svg {
          vertical-align: middle;   
        }
        @media (min-width: $screen-sm-min) {
          display: none;
          height: 24px;
        }
        transition:color linear 0.15s;
        .hide-svg {
          display: none;
        }
        &:focus {
          @include focus-outline--black();
          border-radius: 50%;
          background-color: $kew-focus-colour-light;
        }
      }
    }
  }
  a.top-link, a.top-link { 
    color: $White;
    display: block;
    font-size: 24px;
    font-weight: 400;
    line-height: 1.25;
    text-decoration: none;
    min-height: 52px;
    padding: 16px 20px;
    @media (min-width: $screen-sm-min) {
      text-decoration: none;
      color: $kew-black;
      font-weight: 500;
      font-size: 14px;
      min-height: auto;
      padding: 0;
      &.current {
        color: $kew-teal;
      }
    }
    &:hover {
      color:$White;
      @media (min-width: $screen-sm-min) {
        color:$kew-teal;
      }
    }
  }
  h1 {
    font-weight: 700;
    font-size: $font-size-h2;

    @media (min-width: $screen-sm-min) {
      font-size: $font-size-h1;
    }
  }

  .container {
    // margin: 0;
    small {
      display: block;
      font-size: 60%
    }
  }

  .featured {
    text-align: right;
    display: none;
    margin-top: 30px;
    float: right;
  }
}
a#kew-logo {
  text-decoration: none;
}
#kew-logo {
  display: -webkit-flex; 
  display: flex;
  width: 242px;
  margin-right: 0;
  @media (min-width: $screen-sm-min) {
    width: 252px;
    margin-right: 10px;
  }
  &:focus {
    text {
      fill: $kew-focus-text-colour;
    }
  }
  #kew-powo-logo-svg {
    text {
      fill: $kew-teal;
    }
    rect, g {
      fill: $kew-black;
    }
  }
  

  @media (min-width: $screen-sm-min) {
  #kew-logo-svg {
    width: 200px;
    height: 60px;
    }
  }
  @media (max-width: $screen-sm-min) {
    #kew-logo-svg {
      height: 45px;
      width: 130px;
    }
  }
}

.s-search__fullpage {
  .featured {
    @media (min-width: $screen-sm-min) {
      display: block;
    }
  }
}

.c-header .site-logo {
  height: 45px;
  padding-left: 10px;
  margin-left: 5px;
  svg {
    width: 125px;
    height: 45px;
  }

  @media (min-width: $screen-sm-min) {
    height: 60px;
    border-left: 1px solid #fff;
    padding-left: 15px;
    margin-left: 15px;
    display: inline-block;
    
    svg {
      width: 160px;
      height: 60px;
    }
    
  }
}

.s-search__fullpage .c-header .site-logo {
  display: none;
}

